@@ -1,22 +1,17 @@
-KeYmaera4
-=========
+KeYmaera X
+==========
 
-Repository for the clean-slate reimplementation of KeYmaera,
-a theorem prover for hybrid systems.
-KeYmaera 4 combines a small isolated prover core responsible
-for sound implementations of the fundamental proof rules as well
-as a flexible tactic language layer on top that makes it easy to
-provide user-defined proof strategies. KeYmaera 4 is also
-intended to include possibilities for parallel proof search.
-The prover front-end, middleware, and back-end are separated by
-design.
+KeYmaera X is a theorem prover for differential dynamic logic (dL), a logic for specifying and verifying properties of hybrid systems with mixed discrete and continuous dynamics. Reasoning about complicated hybrid systems requires support for sophisticated proof techniques, efficient computation, and a user interface that crystallizes salient properties of the system. KeYmaera X allows users to specify custom proof search techniques as tactics, execute tactics in parallel, and interface with partial proofs via an extensible user interface.
+
+KeYmaera X is built up from a small trusted core. The core contains a finite list of locally sound dL axioms that are instantiated using a uniform substitution proof rule. Isolating all soundness-critical reasoning in this axiomatic core obviates the otherwise intractable task of ensuring that proof search algorithms are implemented correctly. This enables advanced proof search features---such as aggressive, speculative proof search and user-defined tactics built using a flexible tactic language---without correctness concerns that could undermine the usefulness of automated analysis. Early experimentation with KeYmaera X suggests that a single layer of tactics on top of the axiomatic core provides a rich language for implementing novel and highly sophisticated automatic proof procedures.
+
+  http://keymaeraX.org/
 
 Installation
 ============
 
-The easiest way to run KeYmaera4 from source is to install its dependencies and run HyDRA via SBT:
+The easiest way to run KeYmaera X from source is to install its dependencies and run HyDRA via SBT:
 
-    * Install MongoDB. Be sure that that your machine is behind a firewall and/or edit the MongoDB configuration file so that the server binds to the loopback address.
     * Install Scala (and the JRE).
     * Install SBT and following the instructions in the Building section.
 
@@ -28,7 +23,7 @@ at the link following:
 
 http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html
 
-Instructions are available at that website as well. Briefly, type
+Detailed instructions are available at that website as well. Briefly, type
 
     sbt compile
 
@@ -43,18 +38,10 @@ Type
 
     sbt test
 
-to run the regression test case suite. To run the KeYmaera parser use:
-
-    sbt run
-
+to run the regression test case suite.
 If you run into problems during the compilation process, use "sbt clean" for a fresh start to remove stale files.
 
-To make sure sbt does not throw java.lang.OutOfMemoryError: PermGen space
-
-    edit ~/.sbtconfig
-    SBT_OPTS="-XX:MaxPermSize=256M"
-
-The Wiki contains extended build instructions and solutions to toher
+The Wiki contains extended build instructions and solutions to other
 common sbt problems:
 
 https://github.com/LS-Lab/KeYmaera4/wiki/Building-Instructions
@@ -62,91 +49,76 @@ https://github.com/LS-Lab/KeYmaera4/wiki/Building-Instructions
 Generating Scaladoc
 ===================
 
-To generate scoaladoc, run:
+To generate Scaladoc documentation files, run:
 
     sbt doc
 
 Documentation will be generated for each subproject in the 
-target/scala-x.xx/api directory of the subproject. 
-For instance, keymaerax-core/target/scala-2.10/api for the core subproject.
+`target/scala-x.xx/api` directory of the subproject. 
+For instance, `keymaerax-core/target/scala-2.10/api` for the core subproject.
 
 To generate unified scaladoc for all subprojects, run:
 
-  sbt unidoc
+    sbt unidoc
 
 
 IntelliJ IDEA
 =============
 
-Installation
+If you want to use the IntelliJ IDEA development environment, install it:
 - Install IntelliJ IDEA
 - Install the Scala plugin
 
 Project Setup
 - Create a new Scala project, backed by SBT
 - Select a JDK as your project SDK, add a new one if not previously added
-- Check update automatically (not checked by default), so that updates to build.sbt are reflected automatically in the project
+- Check `update automatically` (not checked by default), so that updates to build.sbt are reflected automatically in the project
 
 Create a new run configuration of type Application.
-- Main class: edu.cmu.cs.ls.keymaerax.hydra.Boot
+- Main class: `edu.cmu.cs.ls.keymaerax.hydra.Boot`
 - Set the working directory to the project path
 - Use the classpath of your project module
 
 Front End
 =========
 
-    mongod --config /usr/local/etc/mongod.conf
     sbt "~ re-start"
     open http://localhost:8090/index_bootstrap.html
 
-The option re-start ensures that the server is restarted whenever a source file changes.
+The option re-start ensures that the server is automatically restarted whenever a source file changes.
 
 Errors related to JLinkNative Library are caused by Java 1.8 in combination with Mathematica 9.
 Either run using Java 1.7, or update to Mathematica 10.
 
-KeYmaera is successfully started when you see the following console output
+KeYmaera X is successfully started when you see the following console output
 
     Bound to localhost/127.0.0.1:8090
 
-Proof Tree Viewer
-=================
-
-To view proof trees converted to JSON by TermTests.print you can use
-jsgui/proofviewer.html
-
-Simply deploy proofviewer.html to any webserver and put the JSON
-descirption into resources/proof.json in the same directory on the
-webserver. Please note that JSON sources cannot be read from file-urls
-and thus have to be accessed through a webserver. There are no
-specific requirements for the webserver since it is only servering
-html and the JavaScript part is interpreted in the browser on the
-client anyway.
-
-Source Layout
-=============
+Source Code Layout
+==================
 
 build.sbt - SBT configuration file
 
-jsgui/ - The javascript front-end
+keymaerax-core/src/ - Source code directory
 
-src/ - Source code directory
+keymaerax-core/src/main/scala - source code (edu.cmu.cs.ls.keymaerax)
 
-src/main/scala - source code (edu.cmu.cs.ls.keymaerax)
-
-Within the keymaera namespace, code is separated according to functionality:
+Within the edu.cmu.cs.ls.keymaerax namespace, code is separated according to functionality:
 
     .core    - Soundness-critical core
     .parser  - Parsing and pretty printing
     .tactics - Tactic framework, including tactic implementations and the scheduler
     .tools   - Arithmetic back-ends
 
-src/test/scala - tests run by `sbt test`
+keymaerax-webui/src/ - Source code directory for Web UI etc.
+
+keymaerax-webui/src/test/scala - tests run by `sbt test`
 
 The wiki contains an introduction to the testing framework:
 https://github.com/LS-Lab/KeYmaera4/wiki/How-to-Add-Tests
 http://www.scalatest.org/user_guide
 
-target/ - Created by sbt on first compilation.
+target/ - Generated files directory created by sbt on first compilation.
 
 target/scala-2.10/classes/ - Target directory for sbt compilation.
 
@@ -178,19 +150,16 @@ To inline scala console output alongside the test suite information, first do:
 
     sbt>  set logBuffered in Test := false
 
-Proof Tree Viewer
-=================
+Optional Database Alternative: MongoDB
+=============================
 
-To view proof trees converted to JSON by TermTests.print you can use
-jsgui/proofviewer.html
+If you prefer to work with a MongoDB than with SQL you also need to install
 
-Simply deploy proofviewer.html to any webserver and put the JSON
-descirption into resources/proof.json in the same directory on the
-webserver. Please note that JSON sources cannot be read from file-urls
-and thus have to be accessed through a webserver. There are no
-specific requirements for the webserver since it is only servering
-html and the JavaScript part is interpreted in the browser on the
-client anyway.
+    * Install MongoDB. Be sure that that your machine is behind a firewall and/or edit the MongoDB configuration file so that the server binds to the loopback address.
+
+Make sure to run the following before starting KeYmaera X:
+
+    mongod --config /usr/local/etc/mongod.conf
 
 Specification
 =============
